fix : fix text overflow issues

--- a/src/components/Home/Room.scss
+++ b/src/components/Home/Room.scss
@@ -9,13 +9,9 @@
     gap: 5px;
 
     .tags {
-      display: flex;
-      flex-direction: row;
-      gap: 10px;
-      .tag {
-        font-size: 12px;
-        color: #577FBC;
-      }
+      font-size: 12px;
+      color: #577FBC;
+      white-space: pre-wrap;
     }
 
     .title {
@@ -23,6 +19,9 @@
       flex-direction: row;
       gap: 5px;
       align-items: center;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
 
       span {
         font-size: 16px;
